<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerSetup"
    android:background="#D7CCC8">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="@string/PlayerSetupTitle"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:textStyle="bold"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/Labe1"
        android:textColor="#FF0000"
        app:layout_constraintBottom_toTopOf="@+id/player1name"
        app:layout_constraintStart_toStartOf="@+id/player1name" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/Label2"
        android:textColor="#0040FF"
        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@+id/player2name"
        app:layout_constraintStart_toStartOf="@+id/player2name" />

    <EditText
        android:id="@+id/player1name"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="120dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/NameHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/player2name"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="128dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/NameHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player1name" />

    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:background="@drawable/red_button"
        android:onClick="submitButtonOnclick"
        android:text="@string/submitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player2name" />
</androidx.constraintlayout.widget.ConstraintLayout>